# mmlib

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
docs/: floating.md  seeding.md
mmlib/: constants.py  floating.py  game.py  gameset.py  handicap.py  macmahon.py  mmlib.py  models.py  parameters.py  player.py  playerset.py  scoring.py  seeding.py  tournament.py  utils.py
tests/: conftest.py  helpers.py  test_floating.py  test_game.py  test_handicap.py  test_macmahon.py  test_player.py  test_scores.py  test_scoring.py  test_seeding.py  test_tournament.py
tests/test_data/input/: easy000-2players-1round.json  easy001-4players-1round.json  easy001.json  easy002-4players-2round.json  easy003-4players-3round.json  normal001-8players-1round.json  normal001-8players-2round.json
tests/test_data/output/: easy000-2players-1round.json  easy001-4players-1round.json  easy001.json  easy002-4players-2round.json  easy002.json  easy003-4players-3round.json  normal001-8players-1round.json  normal001-8players-2round.json
