[tool.poetry]
name = "mmlib"
version = "0.1.0"
description = "Library for MacMahon Tournaments"
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@gmail.com>"]

[tool.poetry.dependencies]
pydantic = "^1.10.2"
python = "^3.10"

[tool.poetry.dev-dependencies]
faker = "^15.3.2"
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
