[tool.poetry]
name = "mmlib"
version = "0.1.0"
description = "Library for MacMahon Tournaments"
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.8.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
